--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_executable(pendulum_raylib main.c)
+file(GLOB SOURCES "*.c")
+
+add_executable(pendulum_raylib ${SOURCES})
 
 target_link_libraries(pendulum_raylib PRIVATE raylib)
