include dir added. Circle rotation implemented.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,9 @@ file(GLOB SOURCES "*.c")
 
 add_executable(pendulum_raylib ${SOURCES})
 
-target_link_libraries(pendulum_raylib PRIVATE raylib)
+target_include_directories(pendulum_raylib 
+    PRIVATE 
+    ../include
+)
+
+target_link_libraries(pendulum_raylib PRIVATE raylib m)
