GUI values revised. Native file dialog added.
TODO: Save system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,12 @@
 file(GLOB SOURCES "*.c")
 
-add_executable(pendulum_raylib ${SOURCES} ../external/cJSON/cJSON.c)
+add_executable(pendulum_raylib ${SOURCES} ../external/cJSON/cJSON.c ../external/file_util/file_util.c)
 
 target_include_directories(pendulum_raylib 
     PRIVATE 
     ../include
     ../external/cJSON
+    ../external/file_util
 )
 
-target_link_libraries(pendulum_raylib PRIVATE raylib raygui m)
+target_link_libraries(pendulum_raylib PRIVATE raylib raygui m nfd)
