--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,14 @@ target_include_directories(pendulum_raylib
     PRIVATE 
     ../include
     ../external/cJSON
+
 )
+
+if(UNIX)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+    target_include_directories(pendulum_raylib PRIVATE ${GTK3_INCLUDE_DIRS})
+    target_link_libraries(pendulum_raylib PRIVATE ${GTK3_LIBRARIES})
+endif()
 
 target_link_libraries(pendulum_raylib PRIVATE raylib raygui m nfd)
