Added instructions to README.md

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,14 +6,30 @@ target_include_directories(pendulum_raylib
     PRIVATE 
     ../include
     ../external/cJSON
-
 )
 
-if(UNIX)
+target_link_libraries(pendulum_raylib PRIVATE raylib raygui m nfd)
+
+if (UNIX AND NOT APPLE)
     find_package(PkgConfig REQUIRED)
+
     pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
     target_include_directories(pendulum_raylib PRIVATE ${GTK3_INCLUDE_DIRS})
     target_link_libraries(pendulum_raylib PRIVATE ${GTK3_LIBRARIES})
+
+    pkg_check_modules(RAYLIB_LINUX_DEPS REQUIRED x11 xrandr xcursor xi xinerama 
+        ${CMAKE_DL_LIBS} # libdl
+    )
+
+    target_link_libraries(pendulum_raylib 
+        ${RAYLIB_LINUX_DEPS_LIBRARIES}
+    )
 endif()
 
-target_link_libraries(pendulum_raylib PRIVATE raylib raygui m nfd)
+if (APPLE)
+    target_link_libraries(${PROJECT_NAME} 
+        "-framework Cocoa"
+        "-framework IOKit"
+        "-framework CoreFoundation"
+    )
+endif()
